deploy/yc-sirius/edu-admiring-carson/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: edu-admiring-carson
  labels:
    app: nginx-test
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
