deploy/yc-sirius/edu-admiring-carson/django-app-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deployment
  namespace: edu-admiring-carson
  labels:
    app: django-app
spec:
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: django-app
        image: lamerork/django_app_k8s:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: ssl-cert
          mountPath: "/.postgresql/root.crt"
          readOnly: true
      volumes:
      - name: ssl-cert
        secret:
          secretName: psql-cert
          defaultMode: 0600

---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    env: prod
spec:
  selector:
    app: django-app
  type: NodePort
  ports:
    - name: web-http
      protocol: TCP
      port: 80
      nodePort: 30441
