deploy/yc-sirius/edu-admiring-carson/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web
  namespace: edu-admiring-carson
  labels:
    app: nginx-test
spec:
  selector:
    app: nginx-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30441
  type: NodePort
