deploy/yc-sirius/edu-admiring-carson/django-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: edu-admiring-carson
spec:
  ingressClassName: nginx
  rules:
  - host: edu-admiring-carson.sirius-k8s.dvmn.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
